# Inventory_Webapp

./: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/: main.rs  router.rs  store.rs
src/components/: alert.rs  cable_component.rs  cable_type_component.rs  form_input.rs  form_select.rs  header.rs  loading_button.rs  mod.rs  modal.rs  spinner.rs
src/models/: cable_model.rs  cable_type_model.rs  mod.rs
src/pages/: cable_page.rs  cable_type_page.rs  create_cable_page.rs  create_cable_type_page.rs  home_page.rs  mod.rs  update_cable_page.rs  update_cable_type_page.rs
src/server_requests/: cable_requests.rs  cable_type_requests.rs  mod.rs
styles/: tailwind.css
