[package]
name = "inventory_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"