[package]
name = "inventory_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"